hard-gists/39c2f27b581720482bc0/run.log
=== Docker Run Log for 39c2f27b581720482bc0 ===
Started at: Mi 29. Okt 14:09:51 CET 2025

[2025-10-29 14:09:51] START: Running container for 39c2f27b581720482bc0
[2025-10-29 14:09:52] SUCCESS: Container dfd0afd7b57bbca914c4e56b84ba0c4f1f6780adf924662e8c65b5d07000bcdb started for 39c2f27b581720482bc0
=== Container logs for 39c2f27b581720482bc0 ===
  File "/snippet.py", line 16
    print red(filename)
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 39c2f27b581720482bc0 ===
[2025-10-29 14:09:54] INFO: Container dfd0afd7b57bbca914c4e56b84ba0c4f1f6780adf924662e8c65b5d07000bcdb has stopped
